[gd_scene load_steps=8 format=3 uid="uid://qrvhfsa3bh71"]

[ext_resource type="Script" path="res://scripts/credits.gd" id="1_gepxa"]
[ext_resource type="Theme" uid="uid://ffvkc1fawd3o" path="res://themes/default.tres" id="6_xrbx8"]
[ext_resource type="Shader" path="res://shaders/recolor.gdshader" id="7_6gyib"]
[ext_resource type="Texture2D" uid="uid://c2xiawoqxu46h" path="res://assets/ui/arrow_left.png" id="7_buckb"]
[ext_resource type="Texture2D" uid="uid://dkve2mjwjrxaj" path="res://assets/ui/arrow_right.png" id="8_iqbwa"]
[ext_resource type="PackedScene" uid="uid://bp7i043fy7n2j" path="res://scenes/components/controls.tscn" id="8_vtt8h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0gih4"]
shader = ExtResource("7_6gyib")
shader_parameter/threshold1 = 0.167
shader_parameter/threshold2 = 0.5
shader_parameter/threshold3 = 0.833
shader_parameter/color1 = Color(0.184314, 0, 0.188235, 1)
shader_parameter/color2 = Color(0.376471, 0.145098, 0.470588, 1)
shader_parameter/color3 = Color(0.945098, 0.556863, 0.113725, 1)
shader_parameter/color4 = Color(0.960784, 0.941176, 0.529412, 1)

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gepxa")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
custom_minimum_size = Vector2(160, 144)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 144.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_xrbx8")
alignment = 1

[node name="MarginL" type="Control" parent="UI/Control/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_xrbx8")

[node name="MarginT" type="Control" parent="UI/Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Title" type="Label" parent="UI/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_xrbx8")
text = "Someone's Name
http://example.com"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FlexV" type="Control" parent="UI/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="Label" parent="UI/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_xrbx8")
text = "Programming
Audio Design
Moral Support"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FlexV2" type="Control" parent="UI/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hints" type="HBoxContainer" parent="UI/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HintLeft" type="Label" parent="UI/Control/HBoxContainer/VBoxContainer/Hints"]
layout_mode = 2
theme = ExtResource("6_xrbx8")
text = "B: Back"

[node name="FlexH" type="Control" parent="UI/Control/HBoxContainer/VBoxContainer/Hints"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HintRight" type="Label" parent="UI/Control/HBoxContainer/VBoxContainer/Hints"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_xrbx8")
text = "A: Open Link"

[node name="MarginB" type="Control" parent="UI/Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginR" type="Control" parent="UI/Control/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_right = 160.0
offset_bottom = 144.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginL" type="Control" parent="UI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="ArrowLeft" type="TextureRect" parent="UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_buckb")

[node name="FlexH" type="Control" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArrowRight" type="TextureRect" parent="UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_iqbwa")

[node name="MarginR" type="Control" parent="UI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="RecolorLayer" type="CanvasLayer" parent="."]

[node name="RecolorShader" type="ColorRect" parent="RecolorLayer"]
material = SubResource("ShaderMaterial_0gih4")
offset_right = 160.0
offset_bottom = 256.0

[node name="Controls" parent="." instance=ExtResource("8_vtt8h")]
